--- a/css/brands.css
+++ b/css/brands.css
@@ -72,7 +72,7 @@ button:hover,
   vertical-align: middle;
   width: 20px;
   height: 20px;
-  display: absolute;
+  position: absolute;
   left: 0;
 }
 
