--- a/css/brands.css
+++ b/css/brands.css
@@ -44,7 +44,7 @@ button {
   letter-spacing: 0.1px;
   white-space: wrap;
   outline: none;
-  border-radius: 8px;
+  border-radius: 22px;
   cursor: pointer;
   
 }     
@@ -72,8 +72,6 @@ button:hover,
   vertical-align: middle;
   width: 20px;
   height: 20px;
-  position: absolute;
-  right: 312px;
 }
 
 /* Brand Styles
@@ -82,7 +80,7 @@ button:hover,
 /* Default (this is great for your own brand color!) */
 .button.button-default {
   color: #ffffff;
-  background-color: #2457F5;
+  background-color: deepskyblue;
 }
 .button.button-default:hover,
 .button.button-default:focus {
@@ -96,7 +94,7 @@ button:hover,
   border: 1px solid #212121;
 }
 .button.button-amazon:hover,
-.button.button-amazon:focus {
+.button.button -amazon:focus {
   filter: brightness(90%);
 }
 
